--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
 
 	%sapper.base%
 
-	<link rel="stylesheet" href="global.css">
+    <link href="https://unpkg.com/mono-icons@1.0.5/iconfont/icons.css" rel="stylesheet">
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<link rel="icon" type="image/png" href="favicon.png">
 
