--- a/src/template.html
+++ b/src/template.html
@@ -25,7 +25,7 @@
 	     the current page has one -->
 	%sapper.head%
 
-    <!-- Hotjar Tracking Code for valentinrogg.de -->
+    <!-- Hotjar Tracking Code for https://valentinrogg.de -->
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -36,6 +36,7 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+
 
 </head>
 <body>
