--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
 
     <link href="https://unpkg.com/mono-icons@1.0.5/iconfont/icons.css" rel="stylesheet">
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="me_lowest_flat.png">
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
@@ -26,7 +26,7 @@
 	%sapper.head%
 
     <!-- Hotjar Tracking Code for https://valentinrogg.de -->
-    <script>
+    <script preconnect>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
             h._hjSettings={hjid:2009689,hjsv:6};
