Add JetBrains Mono

--- a/src/template.html
+++ b/src/template.html
@@ -39,9 +39,8 @@
 
 
 </head>
-<body>
-	<!-- The application will be rendered inside this element,
-	     because `src/client.js` references it -->
-	<div id="sapper">%sapper.html%</div>
+<body  id="sapper">
+    %sapper.html%
+<!--	<div id="sapper">%sapper.html%</div>-->
 </body>
 </html>
