--- a/src/template.html
+++ b/src/template.html
@@ -26,7 +26,7 @@
 	%sapper.head%
 
     <!-- Hotjar Tracking Code for https://valentinrogg.de -->
-    <script preconnect>
+    <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
             h._hjSettings={hjid:2009689,hjsv:6};
