Add signature Fix error Add footer Add skills Add projects

--- a/src/template.html
+++ b/src/template.html
@@ -39,5 +39,6 @@
 </head>
 <body id="sapper">
     %sapper.html%
+    <script type="text/javascript" src="vanilla-tilt.min.js"></script>
 </body>
 </html>
