--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 	%sapper.base%
 
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-	<link rel="icon" type="image/png" href="me_lowest_flat.png">
+	<link rel="icon" type="image/png" href="me_lowest_flat.webp">
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
@@ -25,16 +25,16 @@
 	%sapper.head%
 
     <!-- Hotjar Tracking Code for https://valentinrogg.de -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:2009689,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+<!--    <script>-->
+<!--        (function(h,o,t,j,a,r){-->
+<!--            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};-->
+<!--            h._hjSettings={hjid:2009689,hjsv:6};-->
+<!--            a=o.getElementsByTagName('head')[0];-->
+<!--            r=o.createElement('script');r.async=1;-->
+<!--            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;-->
+<!--            a.appendChild(r);-->
+<!--        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');-->
+<!--    </script>-->
 </head>
 <body id="sapper">
     %sapper.html%
