Add more skin colors Add Dedun content Add Montgolfiere content Add pinterest claim

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,7 @@
 
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<link rel="icon" type="image/png" href="me_lowest_flat.webp">
+    <meta name="p:domain_verify" content="92dff97aec81ee64a48118fbefc543d0"/>
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
