--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
 
 	<link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 	<link rel="icon" type="image/png" href="me_lowest_flat.webp">
-    <meta name="p:domain_verify" content="92dff97aec81ee64a48118fbefc543d0"/>
+	<meta name="p:domain_verify" content="92dff97aec81ee64a48118fbefc543d0"/>
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
@@ -25,19 +25,19 @@
 	     the current page has one -->
 	%sapper.head%
 
-    <!-- Hotjar Tracking Code for https://valentinrogg.de -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:2009689,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+	<!-- Hotjar Tracking Code for https://valentinrogg.de -->
+<!--	<script>-->
+<!--		(function(h,o,t,j,a,r){-->
+<!--			h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};-->
+<!--			h._hjSettings={hjid:2009689,hjsv:6};-->
+<!--			a=o.getElementsByTagName('head')[0];-->
+<!--			r=o.createElement('script');r.async=1;-->
+<!--			r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;-->
+<!--			a.appendChild(r);-->
+<!--		})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');-->
+<!--	</script>-->
 </head>
 <body id="sapper">
-    %sapper.html%
+%sapper.html%
 </body>
 </html>
