--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Svelte demo app" />
+    <script src="https://kit.fontawesome.com/fb271958c9.js" crossorigin="anonymous"></script>
     <link rel="icon" href="%svelte.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %svelte.head%
   </head>
   <body>
-    <div>%svelte.body%</div>
+    %svelte.body%
   </body>
 </html>
