--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,16 @@
     <script src="https://kit.fontawesome.com/fb271958c9.js" crossorigin="anonymous"></script>
     <link rel="icon" href="%svelte.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      @font-face {
+        font-family: "Display";
+        src:
+          url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Bold.woff2) format('woff2'),
+          url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Bold.woff) format('woff');
+        font-weight: 700;
+        font-style: normal;
+      }
+    </style>
     %svelte.head%
   </head>
   <body>
