--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="stylesheet" href="app.css" />
+    <script src="https://kit.fontawesome.com/fb271958c9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="Valentin Rogg" />
+    <title>Valentin Rogg</title>
     %sveltekit.head%
   </head>
   <body>
