--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="%sveltekit.assets%/app.css" />
     <script src="//cdn.jsdelivr.net/npm/faunadb@latest/dist/faunadb-min.js"></script>
     <script src="https://kit.fontawesome.com/fb271958c9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width" />
