Add admin page functionality (fauna)

--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="%sveltekit.assets%/app.css" />
     <script src="//cdn.jsdelivr.net/npm/faunadb@latest/dist/faunadb-min.js"></script>
     <script src="https://kit.fontawesome.com/fb271958c9.js" crossorigin="anonymous"></script>
+<!--    <script src="https://unpkg.com/@telemetrydeck/sdk/dist/telemetrydeck.min.js" defer></script>-->
     <meta name="viewport" content="width=device-width" />
-    <title>Valentin Rogg</title>
     %sveltekit.head%
   </head>
   <body>
