--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <link rel="stylesheet" href="%sveltekit.assets%/app.css" />
-    <script src="//cdn.jsdelivr.net/npm/faunadb@latest/dist/faunadb-min.js"></script>
+    <link rel="icon" href="/favicon/light/favicon-64x64.png" />
+    <link rel="stylesheet" href="/app.css" />
     <script src="https://kit.fontawesome.com/fb271958c9.js" crossorigin="anonymous"></script>
-<!--    <script src="https://unpkg.com/@telemetrydeck/sdk/dist/telemetrydeck.min.js" defer></script>-->
     <meta name="viewport" content="width=device-width" />
+    <title>Valentin Rogg</title>
     %sveltekit.head%
   </head>
   <body>
