--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon/light/favicon-64x64.png" />
+    <link rel="stylesheet" href="/fonts.css" />
     <link rel="stylesheet" href="/app.css" />
     <script src="https://kit.fontawesome.com/fb271958c9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width" />
