--- a/src/app.html
+++ b/src/app.html
@@ -10,8 +10,8 @@
     <title>Valentin Rogg</title>
     %sveltekit.head%
   </head>
-  <body>
-    <div>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">
       %sveltekit.body%
     </div>
   </body>
