--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon/light/favicon-64x64.png" />
     <script src="https://kit.fontawesome.com/fb271958c9.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
