add sendrequest component

--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="%paraglide.lang%" dir="%paraglide.textDirection%">
+<html lang="de">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="https://r2.valentinrogg.de/imgs/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>vr – Valentin Rogg</title>
+		<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+		<title>vr — Valentin Rogg</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" style="display: contents">
+		%sveltekit.body%
 	</body>
 </html>
