Create carousel and animations and content blocks

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,10 @@
 <html lang="de">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="https://r2.valentinrogg.de/imgs/favicon.png" />
+		<link
+			rel="icon"
+			href="https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/1d30bc83-3240-4428-4360-aef559009d00/public"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 		<title>vr — Valentin Rogg</title>
