--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		<title>vr — Valentin Rogg</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" style="display: contents">
-		%sveltekit.body%
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
