Squash merge codeblocks into pages

--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,28 @@
 <html lang="de">
 	<head>
 		<meta charset="utf-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/8e0fd570-e86a-4ace-e3ee-a147f4616900/public"
+		/>
 		<link
 			rel="icon"
-			href="https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/1d30bc83-3240-4428-4360-aef559009d00/public"
+			type="image/png"
+			sizes="32x32"
+			href="https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/a4bf21f2-72a3-4255-c8dd-1e32c7f7ff00/public"
 		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="https://imagedelivery.net/JEc1YLA5ZSivE42ux7pbDw/4f83b4b7-e83c-47c4-ec7a-61df61bc9400/public"
+		/>
+		<link rel="manifest" href="/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-		<title>vr — Valentin Rogg</title>
+		<title>VR: Valentin Rogg</title>
+		<!-- <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script> -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
