reanable turnstile. add meta description

--- a/src/app.html
+++ b/src/app.html
@@ -23,7 +23,13 @@
 		<link rel="manifest" href="/site.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>VR: Valentin Rogg</title>
-		<!-- <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script> -->
+		<meta
+			name="descprition"
+			content="Hey, ich bin Valentin. Als studierter Entwickler und Digital Product Designer spezialisiere ich mich auf die Konzeption, Umsetzung und Vermarktung von Micro-SaaS und MVPs. Mein Fokus liegt dabei vor allem auf Themen der automatisierten Datenanalyse und interaktiven
+		Visualisierung. Außerdem liegen meine Stärken im Management und Marketing. Ich benutzte gerne Svelte, Rust und	WebGL. Privat bin ich leidenschaftlicher Musiker, Sportler und Globetrotter. Auf meiner Seite gebe ich Einblick in meine Projekte und erzähle von meinen Learnings aus den letzten 5 Jahren
+		im Startup-Umfeld."
+		/>
+		<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
